<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_channel_id" translatable="false">downloader_channel</string>
    <string name="notification_channel_name">Downloader Channel</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="select_file_message">Please select the file to download</string>

    <string name="download_title_1">Glide - Image Loading Library by BumpTech</string>
    <string name="download_title_2">LoadApp - Current Repository by Udacity</string>
    <string name="download_title_3">Retrofit - Type-safe Http client for Android and Java by Square, Inc</string>

    <string name="file_name">File name:</string>
    <string name="download_status">Status:</string>
    <string name="ok_button">OK</string>
    <string name="success">Success</string>
    <string name="success_status">Success</string>
    <string name="failed_status">Fail</string>


</resources>
