<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/detail_animation">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_file_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/default_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/download_title_1"
        app:layout_constraintStart_toEndOf="@+id/txt_file_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_margin"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_download_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/download_status"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_link" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_link"
        app:layout_constraintTop_toBottomOf="@+id/txt_link"
        tools:text="@string/success" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ok_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_margin="@dimen/default_margin"/>

</androidx.constraintlayout.motion.widget.MotionLayout>