<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_banner"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_cloud_download"
        android:scaleType="fitCenter"
        android:tint="@color/download_icon_color"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintTop_toBottomOf="@+id/image_banner"
        android:layout_margin="@dimen/default_margin">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_title_1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_title_2"
            android:layout_marginTop="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_title_3"
            android:layout_marginTop="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
    </RadioGroup>

    <com.udacity.custom.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        app:background="@color/colorPrimary"
        app:progressBackground="@color/colorPrimaryDark"
        app:loadingColor="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>